# 202510_Kayton_3

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/kayton-abi/: Cargo.toml
crates/kayton-abi/src/: lib.rs
crates/kayton-api/: Cargo.toml
crates/kayton-api/src/: lib.rs
crates/kayton-bytecode/: Cargo.toml
crates/kayton-bytecode/src/: lib.rs
crates/kayton-cli/: Cargo.toml
crates/kayton-cli/src/: main.rs
crates/kayton-cli/tests/: run.rs
crates/kayton-emitter-bc/: Cargo.toml
crates/kayton-emitter-bc/src/: lib.rs
crates/kayton-front/: Cargo.toml
crates/kayton-front/src/: ast.rs  diagnostics.rs  hir.rs  interner.rs  lexer.rs  lib.rs  lowering.rs  parser.rs  source.rs  span.rs
crates/kayton-front/tests/: parse_snapshots.rs
crates/kayton-front/tests/snapshots/: parse_snapshots__if_else_suite.snap  parse_snapshots__inline_if.snap  parse_snapshots__simple_function.snap  parse_snapshots__while_loop.snap
crates/kayton-host/: Cargo.toml
crates/kayton-host/src/: lib.rs
crates/kayton-plugin-macros/: Cargo.toml
crates/kayton-plugin-macros/src/: lib.rs
crates/kayton-sema/: Cargo.toml
crates/kayton-sema/src/: lib.rs
crates/kayton-stdlib/: Cargo.toml
crates/kayton-stdlib/src/: lib.rs
crates/kayton-vm/: Cargo.toml
crates/kayton-vm/src/: lib.rs
design/: 20251001_look of the language.md  20251004 steps.md  20251004_starting_design_main.md  20251004_starting_design_preliminary.md  20251008_roadmap.md
xtask/: Cargo.toml
xtask/src/: main.rs
