[workspace]
members = [
    "crates/kayton-front",
    "crates/kayton-sema",
    "crates/kayton-bytecode",
    "crates/kayton-emitter-bc",
    "crates/kayton-vm",
    "crates/kayton-cli",
    "crates/kayton-abi",
    "crates/kayton-api",
    "crates/kayton-host",
    "crates/kayton-plugin-macros",
    "crates/kayton-stdlib",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata]
repository = "https://example.com/kayton"
