[package]
name = "kayton-stdlib"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
kayton-api = { path = "../kayton-api" }
kayton-plugin-macros = { path = "../kayton-plugin-macros" }

[dev-dependencies]
kayton-host = { path = "../kayton-host" }

[lints]
workspace = true
